--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
                     <configuration>
                         <skipAfterFailureCount>1</skipAfterFailureCount>
                         <forkCount>1</forkCount>
-                        <reuseForks>true</reuseForks>
+                        <reuseForks>false</reuseForks>
                         <excludes>
                             <exclude>**/IT*.java</exclude>
                         </excludes>
